Updated the Page Layout as described in Bug #441.

--- a/force-app/main/default/layouts/Summit_Events_Appointment_Type__c-Summit Events Appointment Default Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Summit_Events_Appointment_Type__c-Summit Events Appointment Default Layout.layout-meta.xml
@@ -30,10 +30,6 @@
                 <field>Appointment_Category__c</field>
             </layoutItems>
             <layoutItems>
-                <behavior>Edit</behavior>
-                <field>Appointment_Type__c</field>
-            </layoutItems>
-            <layoutItems>
                 <behavior>Required</behavior>
                 <field>Sort_Order__c</field>
             </layoutItems>
@@ -218,7 +214,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h0t000000jovk</masterLabel>
+        <masterLabel>00h7g000003HHuS</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
