--- a/force-app/main/default/pages/SummitEventsSubmit.page
+++ b/force-app/main/default/pages/SummitEventsSubmit.page
@@ -111,10 +111,14 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                                         <li>
                                             {!appointment.Appointment_Title__c}
                                             <apex:outputPanel layout="none" rendered="{!!ISBLANK(appointment.Appointment_Type__c)}">
-                                                <br/><em>{!appointment.Appointment_Type__c}</em>
+                                                <br/>{!appointment.Appointment_Type__c}
                                             </apex:outputPanel>
                                             <apex:outputPanel layout="none" rendered="{!!ISBLANK(appointment.Description__c)}">
-                                                <br/><em>{!appointment.Description__c}</em>
+                                                <br/>
+                                                {!appointment.Description__c}
+                                            </apex:outputPanel>
+                                            <apex:outputPanel layout="none" rendered="{!!ISBLANK(appointment.Registrant_Input__c)}">
+                                                <br/>{!appointment.Registrant_Input__c}
                                             </apex:outputPanel>
                                         </li>
                                     </apex:repeat>
