--- a/force-app/main/default/staticresources/SummitEventsAssets/css/main.css
+++ b/force-app/main/default/staticresources/SummitEventsAssets/css/main.css
@@ -13,9 +13,10 @@
 .validationError, ul[role=alert] li {
     color: red !important;
 }
+
 .slds-notify_alert .validationError, ul[role=alert] li {
-    color:inherit!important;
-    font-weight: inherit!important;
+    color: inherit !important;
+    font-weight: inherit !important;
     font-size: 1.1em;
 }
 
@@ -112,7 +113,7 @@ textarea.input-textbox {
     color: #fff;
 }
 
-.slds-has-error .selectableOL li {
+.slds-scope .slds-has-error .selectableOL li, .slds-scope .appointment-has-error {
     border: solid 1px red;
 }
 
