begining of appointment trigger and formating

--- a/force-app/main/default/layouts/Summit_Events_Appointments__c-Summit Events Appointment Default Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Summit_Events_Appointments__c-Summit Events Appointment Default Layout.layout-meta.xml
@@ -140,6 +140,10 @@
                 <behavior>Readonly</behavior>
                 <field>UG_Appointment_Category_Order__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Appointment_Virtual_Meeting_URL__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
@@ -220,7 +224,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h2F000000uUUs</masterLabel>
+        <masterLabel>00hDS000008skJx</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
