--- a/force-app/main/default/pages/SummitEventsGeneratedItineraries.page
+++ b/force-app/main/default/pages/SummitEventsGeneratedItineraries.page
@@ -6,7 +6,8 @@ Created by Thaddaeus Dahlberg on 2/26/2019.
 -->
 
 <apex:page id="SummitEventsGeneratedItineraries" standardController="Summit_Events_Registration__c" showHeader="false" sideBar="false" lightningStylesheets="true">
-<table class="slds-table slds-table_cell-buffer slds-table_bordered">
+    <apex:slds />
+    <table class="slds-table slds-table_cell-buffer slds-table_bordered">
     <thead>
     <tr class="slds-line-height_reset">
         <th class="" scope="col">
