Appointment Type Page Layout Update
removed the Appointment Category from the page layout as even a single selection can cause issues as there is a dependency to some records.  Users using the field can add them back  as neccessary.

--- a/force-app/main/default/layouts/Summit_Events_Appointment_Type__c-Summit Events Appointment Default Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Summit_Events_Appointment_Type__c-Summit Events Appointment Default Layout.layout-meta.xml
@@ -19,15 +19,11 @@
                 <behavior>Required</behavior>
                 <field>Title__c</field>
             </layoutItems>
-            <layoutItems>
-                <behavior>Required</behavior>
-                <field>Appointment_Type_Status__c</field>
-            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
-                <behavior>Edit</behavior>
-                <field>Appointment_Category__c</field>
+                <behavior>Required</behavior>
+                <field>Appointment_Type_Status__c</field>
             </layoutItems>
             <layoutItems>
                 <behavior>Required</behavior>
@@ -165,6 +161,11 @@
     <platformActionList>
         <actionListContext>Record</actionListContext>
         <platformActionListItems>
+            <actionName>Edit</actionName>
+            <actionType>StandardButton</actionType>
+            <sortOrder>0</sortOrder>
+        </platformActionListItems>
+        <platformActionListItems>
             <actionName>Delete</actionName>
             <actionType>StandardButton</actionType>
             <sortOrder>1</sortOrder>
@@ -178,11 +179,6 @@
             <actionName>PrintableView</actionName>
             <actionType>StandardButton</actionType>
             <sortOrder>3</sortOrder>
-        </platformActionListItems>
-        <platformActionListItems>
-            <actionName>Edit</actionName>
-            <actionType>StandardButton</actionType>
-            <sortOrder>0</sortOrder>
         </platformActionListItems>
     </platformActionList>
     <relatedLists>
@@ -214,7 +210,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h7g000003HHuS</masterLabel>
+        <masterLabel>00h8H000001PCxD</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
