--- a/force-app/main/default/pages/SummitEventsRegisterAppointments.page
+++ b/force-app/main/default/pages/SummitEventsRegisterAppointments.page
@@ -21,7 +21,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
         <apex:define name="body">
             <div class="slds-grid slds-wrap" xmlns="http://www.w3.org/2000/svg" version="1.1">
                 <div class="slds-col slds-size_1-of-1 slds-p-vertical_x-small slds-p-vertical_xx-small">
-                    <apex:messages/>
+                    <apex:messages />
                 </div>
 
                 <apex:form id="SummitEventsRegisterAppointmentsForm" styleClass="slds-grid slds-wrap">
@@ -63,7 +63,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                             </p>
                         </div>
                         <apex:outputPanel layout="block" styleClass="slds-col slds-size_1-of-1 slds-medium-size_1-of-2 slds-large-size_1-of-2 slds-p-vertical_x-small slds-p-vertical_xx-small slds-p-right_medium" rendered="{!!noOptionalAppointments}">
-                            <h4 class="slds-text-heading_medium slds-p-vertical_xx-small">Choose your options</h4>
+                            <h4 class="slds-text-heading_medium slds-p-vertical_xx-small appointmentsAvailableLabel">{!IF(ISBLANK(eventPage.Event_Appointment_Unchosen_Label__c), 'Choose your options', eventPage.Event_Appointment_Unchosen_Label__c)}</h4>
                             <div id="chooser">
                                 <apex:repeat value="{!allAvailableAppointments}" var="apt">
 
@@ -147,7 +147,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                             <apex:outputPanel rendered="{!requiredAppointments}" layout="inline" styleClass="requiredSelectionLabel">* Selection required.</apex:outputPanel>
                         </apex:outputPanel>
                         <apex:outputPanel layout="block" styleClass="slds-col slds-size_1-of-1 {!IF(!noOptionalAppointments, 'slds-medium-size_1-of-2 slds-large-size_1-of-2', '')} slds-p-vertical_x-small slds-p-vertical_xx-small">
-                            <h4 class="slds-text-heading_medium slds-p-vertical_xx-small">Selected options</h4>
+                            <h4 class="slds-text-heading_medium slds-p-vertical_xx-small appointmentSelectedLabel">{!IF(ISBLANK(eventPage.Event_Appointment_Chosen_Label__c), 'Selected options', eventPage.Event_Appointment_Chosen_Label__c)}</h4>
                             <div id="chosen">
                                 <apex:repeat value="{!chosenApps}" var="app">
                                     <div id="appt-{!app.Id}"
@@ -184,7 +184,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                         </apex:outputPanel>
 
                         <div class="slds-col slds-size_1-of-1 slds-clearfix slds-p-vertical_x-small slds-p-vertical_xx-small">
-                            <p class="slds-text-body slds-p-vertical_xx-small"><em>Once you have made your selections click next.</em></p>
+                            <p class="slds-text-body slds-p-vertical_xx-small nextAppointmentInstructions">{!IF(ISBLANK(eventPage.Event_Appointment_Next_Instructions__c), 'Once you have made your selections click next.', eventPage.Event_Appointment_Next_Instructions__c)}</p>
                             <p class="slds-text-body slds-p-vertical_xx-small">
                                 <apex:commandLink action="{!saveOptions}" onClick="fadeout(); return populateAppJSON();" Value="Next" id="submitOptions" styleClass="slds-button slds-button_brand slds-p-horizontal_xx-large slds-p-vertical_xx-small"/>
                                 <apex:commandLink action="{!previousPage}" onClick="fadeout();" Value="Previous" id="previousPage" styleClass="slds-button slds-button_neutral slds-p-horizontal_xx-large slds-p-vertical_xx-small" immediate="true"/>
