--- a/force-app/main/default/staticresources/SummitEventsAssets/css/main.css
+++ b/force-app/main/default/staticresources/SummitEventsAssets/css/main.css
@@ -57,6 +57,11 @@ textarea.input-textbox {
     overflow-x: hidden;
 }
 
+textarea {
+    width: 100%;
+    height: 75px;
+}
+
 #chosen .appointmentChosen p {
     margin: 6px 0;
 }
