css to make labels inherit main body color

--- a/force-app/main/default/staticresources/SummitEventsAssets/css/main.css
+++ b/force-app/main/default/staticresources/SummitEventsAssets/css/main.css
@@ -2,6 +2,10 @@
     font-weight: bold;
 }
 
+.slds-scope .slds-form-element__label {
+    color: inherit;
+}
+
 .slds-form-element .slds-form-element__help {
     display: none;
 }
